apps/bin-scraper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bin-scraper
spec:
  selector:
    app: bin-scraper
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
